Move index.html to root for deployment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Today-Home</title>
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="shortcut icon" href="../images/weatherToday.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="shortcut icon" href="images/weatherToday.jpg" type="image/x-icon">
 </head>
 <body>
     <video autoplay muted loop playsinline id="bgVideo" class="bg-video">
-        <source src="../video/seamless_loop.mp4" type="video/mp4">
+        <source src="video/seamless_loop.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <div class="overlay"></div>
@@ -30,7 +30,7 @@
     <footer>
         <p> © All rights are reserved 2026 </p>
     </footer>
-    <script src="../js/effects.js"></script>
-    <script src="../js/index.js"></script>
+    <script src="js/effects.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
