changed weather feature

--- a/html/weather.html
+++ b/html/weather.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+    <div class="input-tags" id="input-tags">
+        <input type="text" id="city" class="city" placeholder="enter your city name (example: Hyderabad,New Delhi etc..)">
+        <button type="submit" onclick="callerFun()" id="submit" class="submit">search</button>
+    </div>
+
     <div class="overlay"></div>
 
     <div id="output" class="output"></div>
