--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
             <p class="caption" id="caption"></p>
         </div>
         <div class="input-tags" id="input-tags">
-            <input type="text" id="city" class="city" placeholder="enter your city name (example: Hyderabad,New Delhi etc..)">
-            <button type="submit" onclick="callerFun()" id="submit" class="submit">search</button>
+            <form onsubmit="callerFun(); return false;">
+                <input
+                type="text"
+                id="city"
+                class="city"
+                placeholder="enter your city name (example: Hyderabad, New Delhi etc..)"
+                >
+                <button type="submit" id="submit" class="submit">
+                    search
+                </button>
+            </form>
         </div>
     </div>
         
